Archive2/ea/793b0f8924a41d/output
main.cpp: In function 'int main()':
main.cpp:9:9: error: missing template arguments before 'f'
     Foo f(3);
         ^
main.cpp:9:9: error: expected ';' before 'f'
