Archive2/ea/793b0f8924a41d/main.cpp
template <typename T>
struct Foo
{
   Foo(T t);
};

int main()
{
    Foo f(3);
}